--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="build/tailwind.css">
 </head>
 <body>
-    
+    <header class="flex items-center justify-between px-4 py-3 bg-gray-900">
+        <div>
+            <h3 class="text-white">BootstrapDashboard</h3>
+        </div>
+
+        <div>
+            <button type="button"><img class="h-8 w-8 text-white" src="./img/3.png" alt="mail"></button>
+        </div>
+
+        <div class="flex items-center">
+            <button class="text-gray-500" type="button">Logout</button>
+            <img class="h-8 w-8 text-white" src="./img/2.png" alt="Logout">
+        </div>
+    </header>
 </body>
 </html>
