--- a/public/index.html
+++ b/public/index.html
@@ -9,17 +9,21 @@
 <body>
     <header class="flex items-center justify-between px-4 py-3 bg-gray-900">
         <div>
-            <h3 class="text-white">BootstrapDashboard</h3>
-        </div>
-
-        <div>
-            <button type="button"><img class="h-8 w-8 text-white" src="./img/3.png" alt="mail"></button>
+            <h3 class="text-white">BootstrapDashboard <i class="fas fa-stream"></i></h3>
         </div>
 
         <div class="flex items-center">
-            <button class="text-gray-500" type="button">Logout</button>
-            <img class="h-8 w-8 text-white" src="./img/2.png" alt="Logout">
+            <button class="h-8 w-8 text-gray-500" type="button"><i class="fas fa-search"></i></button>
+            &nbsp;&nbsp;
+            <button class="h-8 w-8 text-gray-500" type="button"><i class="fas fa-bell"></i></button>
+            &nbsp;&nbsp;
+            <button class="h-8 w-8 text-gray-500" type="button"><i class="fas fa-envelope-square"></i></button>
+            &nbsp;&nbsp;
+            <button class="text-gray-500" type="button">Logout <i class="fas fa-sign-out-alt"></i></button>
         </div>
     </header>
+
+    
 </body>
+<script src="https://kit.fontawesome.com/208b59d6ea.js" crossorigin="anonymous"></script>
 </html>
