--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,17 @@
         </div>
     </header>
 
-    
+    <div class="bg-yellow-500 h-full w-56 top-auto">
+        <div class="flex">
+            <img class="h-16" src="./img/1.png" alt="user">
+            <h2>Mark</h2>
+            <h3>Web Designer</h3>
+        </div>
+
+        <div>
+            <ul>Home</ul>
+        </div>
+    </div>
 </body>
 <script src="https://kit.fontawesome.com/208b59d6ea.js" crossorigin="anonymous"></script>
 </html>
